# lazy-gui-choice

./: .gitignore  DEVELOP.md  README.md
cpp_qt/: App.pro  README.md  app.cpp  todolistmodel.cpp  todolistmodel.h  totalestimatelabel.cpp  totalestimatelabel.h
haskell/: README.md
haskell/frp-mvc/: README.md
haskell/mvc/demo/: demo.cabal
haskell/wxhaskell/: Main.hs
